--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 ftfy==5.8
-numpy==1.18.5
+numpy==1.19.2
 pandas==1.0.5
 scikit-image==0.18.2
 scikit-learn==0.24.1
@@ -11,3 +11,4 @@ matplotlib==3.2.2
 regex
 scipy
 h5py
+tensorflow==2.5.0
