--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,20 +1,20 @@
 name: Example workflow for Codecov
-on: [push]
+on: [push, pull_request]
 jobs:
   run:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
+    runs-on: ubuntu-latest
     env:
-      OS: ${{ matrix.os }}
-      PYTHON: '3.7'
+      OS: ubuntu-latest
+      PYTHON: '3.8'
     steps:
-    - uses: actions/checkout@master
+    - uses: checkout@v2
+      with:
+        fetch-depth: ‘2’
+        
     - name: Setup Python
       uses: actions/setup-python@master
       with:
-        python-version: 3.7
+        python-version: 3.8
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -22,16 +22,13 @@ jobs:
     - name: Generate coverage report
       run: |
         pip install coverage
-        coverage run unittests.py
-        coverage report
-        coverage html
+        coverage run -m unittests.py
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         env_vars: OS,PYTHON
         fail_ci_if_error: true
-        files: ./htmlcov/index.html
         flags: unittests
         name: codecov-umbrella
         verbose: true
