--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         pip install coverage
         coverage run unittests.py
+        coverage html
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
@@ -32,5 +33,6 @@ jobs:
         env_vars: OS,PYTHON
         fail_ci_if_error: true
         flags: unittests
+        files: ./htmlcov/index.html
         name: codecov-umbrella
         verbose: true
