updated list of files to omit in coverage report

--- a/.coveragerc
+++ b/.coveragerc
@@ -4,6 +4,7 @@ source = thingsvision
 omit = 
 	*/__init__.py
 	*/usr/local/lib*
+	./thingsvision/tests/*
 	./thingsvision/clip.py
 	./thingsvision/dataset.py
 
@@ -11,5 +12,6 @@ omit =
 omit =
 	*/__init__.py
 	*/usr/local/lib*
+	./thingsvision/tests/*
 	./thingsvision/clip.py
 	./thingsvision/dataset.py
