--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Generate coverage report
       run: |
         pip install coverage
-        coverage run -m unittest discover thingsvision/tests
+        coverage run -m unittest discover tests
         coverage xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
