--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ ftfy==5.8
 numpy==1.19.2
 pandas==1.0.5
 scikit-image==0.18.2
-scikit-learn==0.24.1
-torch==1.7.1
-torchvision==0.8.2
+scikit-learn==0.24.2
+torch==1.11.*
+torchvision==0.12.*
 tqdm==4.47.0
 numba==0.53.1
 matplotlib==3.2.2
