--- a/envs/environment.yml
+++ b/envs/environment.yml
@@ -4,16 +4,16 @@ channels:
  - conda-forge
  - pytorch
 dependencies:
- - python=3.8
- - numpy=1.21.6
+ - python=3.9
+ - numpy=1.22.*
  - ftfy=5.8
- - pandas=1.0.5
+ - pandas=1.4.*
  - scikit-image=0.19.*
- - scikit-learn=1.0.*
- - pytorch=1.11.*
- - torchvision=0.12.*
+ - scikit-learn=1.1.*
+ - pytorch=1.12.*
+ - torchvision=0.13.*
  - tqdm=4.64.0
- - numba=0.55.2
+ - numba=0.56.*
  - matplotlib=3.5.2
  - regex
  - scipy
