--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 ftfy==5.8
-numpy==1.21.6
-pandas==1.0.5
+numpy==1.22.*
+pandas==1.4.*
 scikit-image==0.19.*
-scikit-learn==1.0.*
-torch==1.11.*
-torchvision==0.12.*
+scikit-learn==1.1.*
+torch==1.12.*
+torchvision==0.13.*
 tqdm==4.64.0
-numba==0.55.2
+numba==0.56.*
 matplotlib==3.5.2
 regex
 scipy
