--- a/envs/environment.yml
+++ b/envs/environment.yml
@@ -20,7 +20,9 @@ dependencies:
  - h5py
  - pip
  - pip:
-   - tensorflow==2.9.1
-   - timm==0.6.5 
+   - tensorflow==2.9.*
+   - timm==0.6.*
    - codecov
+   - pyflakes
+   - black 
    - pep8
