--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,6 @@
-title: "THINGSVision: Extracting Activations from Neural Nets"
+title: "THINGSVision"
 # Build settings
 remote_theme: just-the-docs/just-the-docs
-search_enabled: false
 
 
 # Exclude from processing.
