--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,6 +2,21 @@ title: "THINGSVision"
 # Build settings
 remote_theme: just-the-docs/just-the-docs
 
+search_enabled: true
+search.heading_level: 2
+search.previews: 3
+search.preview_words_before: 5
+search.preview_words_after: 10
+
+heading_anchors: true
+
+aux_links:
+  "THINGSvision on GitHub":
+    - "//github.com/ViCCo-Group/THINGSvision"
+    -
+nav_external_links:
+  - title: Just the Docs on GitHub
+    url: https://github.com/just-the-docs/just-the-docs
 
 # Exclude from processing.
 # The following items will not be processed, by default.
