--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ matplotlib==3.5.2
 regex
 scipy
 h5py
-tensorflow==2.9.*
+tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
+tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
 timm==0.6.*
 open_clip_torch==2.0.2
 git+https://github.com/openai/CLIP.git
