--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,12 +11,12 @@ search.preview_words_after: 10
 heading_anchors: true
 
 aux_links:
-  "THINGSvision on GitHub":
-    - "//github.com/ViCCo-Group/THINGSvision"
+  "thingsvision on GitHub":
+    - "//github.com/ViCCo-Group/thingsvision"
     -
 nav_external_links:
-  - title: THINGSvision on GitHub
-    url: https://github.com/ViCCo-Group/THINGSvision
+  - title: thingsvision on GitHub
+    url: https://github.com/ViCCo-Group/thingsvision
 
 # Exclude from processing.
 # The following items will not be processed, by default.
