--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,4 @@ tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm6
 timm==0.6.*
 open_clip_torch==2.0.2
 git+https://github.com/openai/CLIP.git
+git+https://github.com/serre-lab/Harmonization.git
