--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ numpy==1.22.*
 pandas==1.4.*
 scikit-image==0.19.*
 scikit-learn==1.1.*
-torch==1.13.*
-torchvision==0.14.*
+torch==1.13.1
+torchvision==0.14.1
 tqdm==4.64.0
 numba==0.56.*
 matplotlib==3.5.2
