--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ torchtyping
 regex
 scipy
 h5py
-tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
-tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
+tensorflow==2.10.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
+tensorflow-macos==2.10.* ; # sys_platform == 'darwin' and platform_machine == 'arm64'
 timm==0.6.*
 open_clip_torch==2.0.2
 keras-cv-attention-models>=1.3.5
