--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ numpy==1.22.*
 pandas==1.4.*
 scikit-image==0.19.*
 scikit-learn==1.1.*
-torch==1.13.1
-torchvision==0.14.1
+torch==1.13.*
+torchvision==0.14.*
 tqdm==4.64.0
 numba==0.56.*
 matplotlib==3.5.2
@@ -12,7 +12,8 @@ torchtyping
 regex
 scipy
 h5py
-tensorflow==2.10.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
+tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
+tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
 timm==0.6.*
 open_clip_torch==2.0.2
 keras-cv-attention-models>=1.3.5
