--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ torch>=1.12.0
 torchvision>=0.13.0
 numba>=0.55
 tensorflow>=2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
-tensorflow-macos>=2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
+tensorflow-macos>=2.9.* ; sys_platform == 'darwin'
 timm==0.6.*
 open_clip_torch>=2.0.2
 keras-cv-attention-models>=1.3.5
