--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-ftfy==5.8
-numpy==1.22.*
-pandas==1.4.*
-scikit-image==0.19.*
-scikit-learn==1.1.*
-torch>=1.13.0
+ftfy==6.1.1
+numpy==1.22.4
+pandas==1.4.4
+scikit-image==0.19.3
+scikit-learn==1.1.3
+torch>=1.12.1
 torchvision>=0.13.1
 tqdm==4.64.0
-numba==0.56.*
+numba==0.56.4
 matplotlib==3.5.2
-torchtyping
+torchtyping==0.1.4
 regex
-scipy
-h5py
+scipy==1.8.1
+h5py==3.7.0
 tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
-timm==0.6.*
+timm==0.6.11
 open_clip_torch==2.0.2
 keras-cv-attention-models>=1.3.5
 git+https://github.com/openai/CLIP.git
