--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,9 @@ regex
 scipy==1.8.1
 h5py==3.7.0
 tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
+tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
 timm==0.6.11
 open_clip_torch==2.0.2
-keras-cv-attention-models>=1.3.5
+keras-cv-attention-models==1.2.4
 git+https://github.com/openai/CLIP.git
 git+https://github.com/serre-lab/Harmonization.git
