--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ pandas==1.4.4
 scikit-image==0.19.3
 scikit-learn==1.1.3
 torch>=1.13.0
-torchvision>=0.13.1
+torchvision==0.14.1
 tqdm==4.64.0
 numba==0.56.4
 matplotlib==3.5.2
