--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,6 @@ tensorflow==2.10.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.10.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
 timm==0.6.11
 open_clip_torch==2.0.2
-keras-cv-attention-models==1.2.4
+keras-cv-attention-models>=1.3.5
 git+https://github.com/openai/CLIP.git
 git+https://github.com/serre-lab/Harmonization.git
