--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-ftfy==6.1.1
-numpy==1.22.*
-pandas==1.4.4
-scikit-image==0.19.3
-scikit-learn==1.1.3
+ftfy
+numpy>=1.22.*
+pandas>=1.3.*
+scikit-image
+scikit-learn
 torch>=1.13.1
-torchvision==0.14.1
-tqdm==4.64.0
-numba==0.56.4
-matplotlib==3.5.2
-torchtyping==0.1.4
+torchvision==0.14.*
+tqdm
+numba>=0.55.*
+matplotlib
+torchtyping
 regex
-scipy==1.8.1
-h5py==3.7.0
+scipy
+h5py
 tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
-timm==0.6.11
-open_clip_torch==2.0.2
+timm==0.6.*
+open_clip_torch==2.0*
 keras-cv-attention-models>=1.3.5
 git+https://github.com/openai/CLIP.git
 git+https://github.com/serre-lab/Harmonization.git
