--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
 ftfy
+h5py
+keras-cv-attention-models>=1.3.5
+matplotlib
+numba
 numpy>=1.22.*
+open_clip_torch==2.0.*
 pandas>=1.3.*
+regex
 scikit-image
 scikit-learn
-torch>=1.13.1
-torchvision==0.14.*
-tqdm
-numba>=0.55.*
-matplotlib
-torchtyping
-regex
 scipy
-h5py
 tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
 timm==0.6.*
-open_clip_torch==2.0.*
-keras-cv-attention-models>=1.3.5
+torch>=1.13.1
+torchvision==0.14.*
+torchtyping
+tqdm
 git+https://github.com/openai/CLIP.git
 git+https://github.com/serre-lab/Harmonization.git
