--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ scikit-learn
 scipy
 tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
-timm==0.6.*
+timm
 torch>=1.13.1
 torchvision==0.14.*
 torchtyping
