--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ h5py
 keras-cv-attention-models>=1.3.5
 matplotlib
 numba
-numpy>=1.22.*
+numpy==1.22.*
 open_clip_torch==2.0.*
-pandas>=1.3.*
+pandas
 regex
 scikit-image
 scikit-learn
@@ -13,7 +13,7 @@ scipy
 tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
 timm
-torch>=1.13.*
+torch==1.13.*
 torchvision==0.14.*
 torchtyping
 tqdm
