--- a/requirements.txt
+++ b/requirements.txt
@@ -17,5 +17,6 @@ torch==1.13.*
 torchvision==0.14.*
 torchtyping
 tqdm
+dreamsim==0.1.2
 git+https://github.com/openai/CLIP.git
 git+https://github.com/serre-lab/Harmonization.git
