--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ scipy
 tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
 timm
-torch==2.0.*
-torchvision==0.14.*
+torch>=1.9.0
+torchvision==0.15.2
 torchtyping
 tqdm
 dreamsim==0.1.2
