--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ scipy
 tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
 tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
 timm
-torch>=1.9.*
+torch>=2.0.1
 torchvision==0.15.2
 torchtyping
 tqdm
