--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,5 @@ torchtyping
 tqdm
 dreamsim==0.1.3
 git+https://github.com/openai/CLIP.git
+git+https://github.com/serre-lab/Harmonization.git
 transformers==4.40.1
