--- a/requirements.txt
+++ b/requirements.txt
@@ -3,21 +3,22 @@ h5py
 keras-cv-attention-models>=1.3.5
 matplotlib
 numba
-numpy<=1.26.4 
+numpy<2
 open_clip_torch==3.*
 pandas
 regex
 scikit-image
 scikit-learn
 scipy
-tensorflow==2.9.* ; sys_platform != 'darwin' or platform_machine != 'arm64'
-tensorflow-macos==2.9.* ; sys_platform == 'darwin' and platform_machine == 'arm64'
+tensorflow<2.16
 timm
 torch>=2.0.0
 torchvision==0.15.2
 torchtyping
 tqdm
-dreamsim==0.1.3
+pytest
 git+https://github.com/openai/CLIP.git
+dreamsim==0.1.3
+vit-keras==0.1.2
 git+https://github.com/serre-lab/Harmonization.git
 transformers==4.40.1
